apps/radicale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  namespace: nori-cloud
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      containers:
        - name: radicale
          image: tomsquest/docker-radicale:latest
          ports:
            - containerPort: 5232
          volumeMounts:
            - name: config
              mountPath: /config/radicale/config
              subPath: config
            - name: users
              mountPath: /config/radicale/users
              subPath: users
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: config
          configMap:
            name: radicale-config
        - name: users
          secret:
            secretName: radicale-users
        - name: data
          persistentVolumeClaim:
            claimName: radicale-data
