apps/radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: nori-cloud
spec:
  selector:
    app: radicale
  ports:
    - port: 5232
      targetPort: 5232
